Add test java arguments